--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,11 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : false
+    provider : duoshuo
     disqus :
       short_name : jekyllbootstrap
+    duoshuo:
+      short_name : isayme
     livefyre :
       site_id : 123
     intensedebate :
