--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author :
   email : lwent90@gmail.com
   github : Vinntoe
   twitter : Vinntoe
-  feedburner : feedname
+#  feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
