--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ JB :
     disqus :
       short_name : jekyllbootstrap
     duoshuo:
-      short_name : isayme
+      short_name : vinntoe
     livefyre :
       site_id : 123
     intensedebate :
