add pygments and update

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ copyright:
 # so be sure to set them if your theme uses them.
 #
 title : Vinntoe
-tagline: Individual Blog
+description : Individual Blog
+tagline : Individual Blog
 author :
   name : Vinntoe
   email : lwent90@gmail.com
