--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ JB :
   # Some JB helpers refer to these paths; change them here if needed.
   #
   archive_path: /archives.html
+  about_path: /about.html
   categories_path : /categories.html
   tags_path : /tags.html
   atom_path : /atom.xml
