--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,14 @@ copyright:
 # so be sure to set them if your theme uses them.
 #
 title : 自说Me话
-keywords: "Vinntoe,Linux,Web,前端开发,自说Me话,ISayme,Internet"
-description : "Vinntoe's Individual Blog. 自说Me话,一个前端开发新手的网络记录,同喜欢网络,Linux,前端开发,爱折腾的人共同分享,记录折腾心得还有学习过程."
+keywords: "VitoLau,Linux,Web,前端开发,自说Me话,ISayme,Internet"
+description : "VitoLau's Individual Blog. 自说Me话,一个前端开发新手的网络记录,同喜欢网络,Linux,前端开发,爱折腾的人共同分享,记录折腾心得还有学习过程."
 tagline : "I Say Me | 我说我自己 | 我说世界"
 author :
-  name : Vinntoe
+  name : VitoLau
   email : lwent90@gmail.com
-  github : Vinntoe
-  twitter : Vinntoe
+  github : VitoLau
+  twitter : VitoLau
 #  feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
