--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
 markdown: rdiscount
-paginate: 3
+paginate: 4
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -19,7 +19,7 @@ author :
   name : VitoLau
   email : lwent90@gmail.com
   github : VitoLau
-  twitter : VitoLau
+  twitter : VitoLau90
 #  feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
