--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ auto: true
 pygments: true
 markdown: rdiscount
 paginate: 4
+safe: true
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
