--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,6 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 pygments: true
 markdown: rdiscount
 paginate: 4
-safe: true
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -16,7 +15,7 @@ keywords: "VitoLau,Linux,Web,前端开发,自说Me话,ISayme,Internet"
 description : "VitoLau's Individual Blog. 自说Me话,一个前端开发新手的网络记录,同喜欢网络,Linux,前端开发,爱折腾的人共同分享,记录折腾心得还有学习过程."
 tagline : "I Say Me | 我说我自己 | 我说世界"
 author :
-  name : VitoLau
+  name : Jeremial
   email : lwent90@gmail.com
   github : VitoLau
   twitter : VitoLau90
