--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,14 @@ paginate: 4
 # so be sure to set them if your theme uses them.
 #
 title : 自说Me话
-keywords: "Jeremial,Linux,Web,前端开发,自说Me话,ISayme,Internet"
-description : "Jeremial's Individual Blog. 自说Me话,一个前端开发新手的网络记录,同喜欢网络,Linux,前端开发,爱折腾的人共同分享,记录折腾心得还有学习过程."
+keywords: "Treri,Linux,Web,前端开发,自说Me话,ISayme,Internet"
+description : "Treri's Individual Blog. 自说Me话,一个前端开发新手的网络记录,同喜欢网络,Linux,前端开发,爱折腾的人共同分享,记录折腾心得还有学习过程."
 tagline : "I Say Me | 我说我自己 | 我说世界"
 author :
-  name : Jeremial
-  email : Jeremial90@gmail.com
-  github : Jeremial
-  twitter : Jeremial90
+  name : Treri
+  email : treri.liu@gmail.com
+  github : Treri
+  twitter : Treri_liu
   douban : lwent
   QQ : 83692901
   weibo : leftupme
